Events fixed left column spacing and added a google map

--- a/css/index.css
+++ b/css/index.css
@@ -22,3 +22,7 @@
 .sponsors {
 	text-align: center;
 }
+
+.details h5 {
+	margin-top: 30px;
+}
